src/objects/Vacunacion__c.object
<CustomObject>
    <description>Datos relacionados a las vacunas que se le dan a la vaca.</description>
    <fields>
        <fullName>Fecha__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>Fecha de la vacunación</description>
        <label>Fecha</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Nombre_Vacuna__c</fullName>
        <description>Vacuna que la vaca recibió</description>
        <label>Nombre Vacuna</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Precio__c</fullName>
        <description>Precio de la vacuna</description>
        <label>Precio</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vaca__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Una vacuna está destinada a una vaca.</description>
        <label>Vaca</label>
        <referenceTo>Vaca__c</referenceTo>
        <relationshipLabel>Vacunaciones</relationshipLabel>
        <relationshipName>Vacunaciones</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Vacunación</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>VA-{0000}</displayFormat>
        <label>Vacunación Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vacunaciones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>